# async_image_downloader

./: .coverage  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE.txt  README.md  RELEASE_NOTES_v2.1.1.md  RELEASE_NOTES_v2.1.2.md  async_image_downloader.py  async_image_downloader.spec  help.txt  instruction.md  main.py  pyproject.toml  refactoring_progress.md  requirements-full.txt  requirements-minimal.txt  requirements.txt  setup.py
.github/workflows/: build.yml
core/: __init__.py  browser_downloader.py  downloader.py  duplicates.py  image_utils.py
docs/: API.md  Makefile  conf.py  index.rst  quickstart.md
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_download_workflow.py
tests/unit/: test_duplicate_detection_mocks.py  test_duplicates_additional.py  test_image_hashing.py  test_session_manager.py  test_user_guidance.py  test_validation_and_modifications.py
ui/: __init__.py  cli.py  gui.py
utils/: __init__.py  config.py  config_manager.py  config_profiles.py  confirmation.py  error_handling.py  logger.py  progress.py  resource_manager.py  session_manager.py  user_guidance.py  validation.py
